--- a/index.html
+++ b/index.html
@@ -5,24 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboratorio6</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
     <!-- Menú de Navegación -->
-    <nav>
-        <ul>
-            <li><a href="#">Página 1</a></li>
-            <li><a href="#">Página 2</a></li>
-            <li><a href="#">Página 3</a></li>
-        </ul>
-    </nav>
+    <header class="header1">
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                <button type="button" class="btn btn-primary"><a href="Pagina1.html">Página 1</a></button>
+              </div>
+              <div class="col">
+                <button type="button" class="btn btn-primary"><a href="Pagina2.html">Página 2</a></button>
+              </div>
+              <div class="col">
+                <button type="button" class="btn btn-primary"><a href="Pagina3.html">Página 3</a></button>
+              </div>
+            </div>
+          </div>
+    </header>
 
-    <!-- Imagen -->
-    <img src="GorraRedBull.jpeg" alt="Gorra Red Bull Japon 2024">
+    <!-- Imagenes centrales-->
+    <div class="ImgPagPrincipal">
+        <div class="row row-cols-2">
+
+          <div class="col">
+            <article class="Cuadro"><img class="Img" src="Gorra.avif" alt="Gorra Red Bull Japon 2024"></article>
+            <aside class="CuadroTXT"> <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non labore possimus itaque? Repellendus modi aspernatur saepe doloremque totam iure ducimus eveniet voluptas impedit excepturi. Veritatis debitis aut distinctio dolores ratione.</p> </aside>
+          </div>
+
+          <div class="col">
+            <article class="Cuadro"><img class="Img" src="camisa1.jpg" alt="Gorra Red Bull Japon 2024"></article>
+            <aside class="CuadroTXT"> <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non labore possimus itaque? Repellendus modi aspernatur saepe doloremque totam iure ducimus eveniet voluptas impedit excepturi. Veritatis debitis aut distinctio dolores ratione.</p> </aside>
+          </div>
+
+          <div class="col">
+            <article class="Cuadro"></article><img class="Img" src="carro.avif" alt="Gorra Red Bull Japon 2024"></article>
+            <aside class="CuadroTXT"> <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non labore possimus itaque? Repellendus modi aspernatur saepe doloremque totam iure ducimus eveniet voluptas impedit excepturi. Veritatis debitis aut distinctio dolores ratione.</p> </aside>
+          </div>
+
+          <div class="col">
+            <article class="Cuadro"></article><img class="Img" src="Coleccionable.avif" alt="Gorra Red Bull Japon 2024"></article>
+            <aside class="CuadroTXT"> <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non labore possimus itaque? Repellendus modi aspernatur saepe doloremque totam iure ducimus eveniet voluptas impedit excepturi. Veritatis debitis aut distinctio dolores ratione.</p> </aside>
+          </div>
+          
+        </div>
+      </div>
+
+      <section class="Oferta">
+        <aside>
+
+        </aside>
+      </section>
 
     <!-- Texto Grande -->
-    <div class="texto-grande">
+    <footer class="texto-grande">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, quis! Odio est velit exercitationem harum dicta voluptate id quae repellendus quos! Provident soluta odit porro temporibus doloremque voluptate! Saepe, repellendus.</p>
-    </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
 </body>
 </html>
