ENTREGA FINAL DEL LABORATORIO6

--- a/Pagina1.html
+++ b/Pagina1.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina1</title>
-    <link rel="stylesheet" href="Style1.css">
+    <link rel="stylesheet" href="CarpetaStyle/Style1.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -29,13 +30,73 @@
         </div>
   </header>
 
-    <!-- Imagen -->
-    <img src="GorraRedBull.jpeg" alt="Gorra Red Bull Japon 2024">
+  <section class="Boots">
+    <div class="">
+      <div class="row">
+        <div class="ParIzqCar col-5">
+          <article class="CarruselImagenes">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="CarpetaImg/GorraVen1.jfif" class="ImgCarr center" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="CarpetaImg/GorraVen2.jfif" class="ImgCarr" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="CarpetaImg/GorraVen3.jfif" class="ImgCarr" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </article>
+        </div>
 
-    <!-- Texto Grande -->
-    <div class="texto-grande">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, quis! Odio est velit exercitationem harum dicta voluptate id quae repellendus quos! Provident soluta odit porro temporibus doloremque voluptate! Saepe, repellendus.</p>
+        <div class="ParDerCar col-7">
+
+          <h2>Gorras Red Bull Racing</h2>
+          <p>
+            ¡Sumérgete en la emoción de la velocidad y la adrenalina con nuestras gorras de Red Bull Racing! Diseñadas para los verdaderos apasionados del automovilismo, estas gorras son mucho más que un accesorio; son un símbolo de tu pasión por el rendimiento, la innovación y el espíritu ganador. Fabricadas con los más altos estándares de calidad y con el icónico logotipo de Red Bull Racing bordado, estas gorras no solo te ofrecen un estilo inigualable, sino también durabilidad y comodidad para acompañarte en todas tus aventuras.</p>
+          <p>Ya sea que estés en las gradas animando a tu equipo favorito o en la carretera disfrutando de la   vida al máximo, nuestras gorras de Red Bull Racing te mantendrán siempre a la vanguardia. ¡Haz una declaración audaz y demuestra tu lealtad al equipo líder en el mundo del automovilismo con una gorra de Red Bull Racing hoy mismo!</p>
+        </div>
+      </div>
     </div>
+  </section>
+
+  <section class="botDesp">
+  <p>
+    <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Promocion #1</a>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Promocion #2</button>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">¡Aprovechar ambas Promociones!</button>
+  </p>
+  <div class="row">
+    <div class="col">
+      <div class="collapse multi-collapse" id="multiCollapseExample1">
+        <div class="card card-body">
+          ¡Aprovecha esta oferta especial por tiempo limitado! Compra una gorra de Red Bull Racing y llévate otra completamente gratis. ¡Sí, has leído bien! Renueva tu estilo con nuestras gorras de alta calidad y muestra tu apoyo al equipo líder en el mundo del automovilismo. Ya sea que estés en las pistas o en la ciudad, estas gorras te garantizan un look único y lleno de energía. ¡No te pierdas esta oportunidad de duplicar tu estilo con nuestras gorras de Red Bull Racing! <br>
+          CODIGO DE PROMOCION: <b>50KQAOZ</b>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="collapse multi-collapse" id="multiCollapseExample2">
+        <div class="card card-body">
+          ¿Eres un verdadero fanático del automovilismo? Entonces, esta oferta está hecha para ti. Disfruta de un exclusivo descuento del 20% en nuestra colección de gorras de Red Bull Racing. Con diseños inspirados en la velocidad y la innovación, estas gorras son el complemento perfecto para tu estilo deportivo. No pierdas la oportunidad de lucir la misma gorra que tus ídolos en la pista, ¡a un precio increíblemente bajo! Visita nuestra tienda en línea y elige tu gorra favorita antes de que se agoten. <br>
+          CODIGO DE PROMOCION: <b>65PASIQ</b>
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
