--- a/Pagina3.html
+++ b/Pagina3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina3</title>
-    <link rel="stylesheet" href="Style3.css">
+    <link rel="stylesheet" href="CarpetaStyle/Style3.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
@@ -29,13 +29,81 @@
         </div>
   </header>
 
-    <!-- Imagen -->
-    <img src="GorraRedBull.jpeg" alt="Gorra Red Bull Japon 2024">
+  <section class="Boots">
+    <div class="">
+      <div class="row">
+        <div class="ParIzqCar col-5">
+          <article class="CarruselImagenes">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="CarpetaImg/CascoSP11.jfif" class="ImgCarr center" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="CarpetaImg/CamisaSP11.jfif" class="ImgCarr" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="CarpetaImg/AutoSP11.jfif" class="ImgCarr" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </article>
+        </div>
 
-    <!-- Texto Grande -->
-    <div class="texto-grande">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, quis! Odio est velit exercitationem harum dicta voluptate id quae repellendus quos! Provident soluta odit porro temporibus doloremque voluptate! Saepe, repellendus.</p>
+        <div class="ParDerCar col-7">
+
+          <h2>Camisas , Auto RB , CascoRB</h2>
+          <p>
+            Camisa diseñada especialmente para los amantes del motor. Confeccionada con los mejores materiales y un diseño elegante, esta camisa te hará destacar en cualquier lugar al que vayas. Ya sea que estés en una reunión de motociclistas o simplemente relajándote con amigos, lucirás genial y a la moda.</p>
+          <p>Auto coleccionable que hará latir más rápido el corazón de cualquier entusiasta del automovilismo. Este auto en miniatura es una verdadera obra maestra, meticulosamente detallado para capturar la esencia y el encanto de los coches clásicos. Ya sea en tu estante de colección o como pieza central en tu escritorio, este auto coleccionable seguramente será el centro de atención.</p>
+          <p>Este pequeño casco es mucho más que una simple pieza de colección; es un símbolo de tu pasión por la aventura y la adrenalina. Perfecto para exhibir en tu estantería junto a tus otros tesoros de motor, este casco coleccionable seguramente será la envidia de todos tus amigos y compañeros entusiastas.</p>
+        </div>
+      </div>
     </div>
+  </section>
+
+  <section class="botDesp">
+  <p>
+    <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Promocion #1</a>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Promocion #2</button>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">¡Aprovechar ambas Promociones!</button>
+  </p>
+  <div class="row">
+    <div class="col">
+      <div class="collapse multi-collapse" id="multiCollapseExample1">
+        <div class="card card-body">
+          <ul>
+            <li>Camisa: $180</li>
+            <li>Casco: $240</li>
+            <li>Auto coleccionable (Regalo): $0</li>
+              <p>Precio total del paquete: <b>$420</b> <br>
+              CODIGO DE PROMOCION: <b>ZPKQAOZ</b></p>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="collapse multi-collapse" id="multiCollapseExample2">
+        <div class="card card-body">
+          <ul>
+            <li>Auto coleccionable: $100</li>
+            <li>Camisa: $140</li>
+          </ul>
+          <p>Precio total del paquete: <b>$240</b></p>
+          CODIGO DE PROMOCION: <b>65PASIQ</b>
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
