--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboratorio6</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CarpetaStyle/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
@@ -31,22 +31,22 @@
         <div class="row row-cols-2">
 
           <div class="col">
-            <article class="Cuadro"><img class="Img" src="Gorra.avif" alt="Gorra Red Bull Japon 2024"></article>
+            <article class="Cuadro"><img class="Img" src="CarpetaImg/Gorra.avif" alt="Gorra Red Bull Japon 2024"></article>
             <aside class="CuadroTXT"> <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non labore possimus itaque? Repellendus modi aspernatur saepe doloremque totam iure ducimus eveniet voluptas impedit excepturi. Veritatis debitis aut distinctio dolores ratione.</p> </aside>
           </div>
 
           <div class="col">
-            <article class="Cuadro"><img class="Img" src="camisa1.jpg" alt="Gorra Red Bull Japon 2024"></article>
+            <article class="Cuadro"><img class="Img" src="CarpetaImg/camisa1.jpg" alt="Gorra Red Bull Japon 2024"></article>
             <aside class="CuadroTXT"> <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non labore possimus itaque? Repellendus modi aspernatur saepe doloremque totam iure ducimus eveniet voluptas impedit excepturi. Veritatis debitis aut distinctio dolores ratione.</p> </aside>
           </div>
 
           <div class="col">
-            <article class="Cuadro"></article><img class="Img" src="carro.avif" alt="Gorra Red Bull Japon 2024"></article>
+            <article class="Cuadro"></article><img class="Img" src="CarpetaImg/carro.avif" alt="Gorra Red Bull Japon 2024"></article>
             <aside class="CuadroTXT"> <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non labore possimus itaque? Repellendus modi aspernatur saepe doloremque totam iure ducimus eveniet voluptas impedit excepturi. Veritatis debitis aut distinctio dolores ratione.</p> </aside>
           </div>
 
           <div class="col">
-            <article class="Cuadro"></article><img class="Img" src="Coleccionable.avif" alt="Gorra Red Bull Japon 2024"></article>
+            <article class="Cuadro"></article><img class="Img" src="CarpetaImg/Coleccionable.avif" alt="Gorra Red Bull Japon 2024"></article>
             <aside class="CuadroTXT"> <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non labore possimus itaque? Repellendus modi aspernatur saepe doloremque totam iure ducimus eveniet voluptas impedit excepturi. Veritatis debitis aut distinctio dolores ratione.</p> </aside>
           </div>
           
